# GAIA_phi

./: CMakeLists.txt  COGNITIO_GEOMETRICA.py  FCEA_ABSENCE_INDEX.sh  FCEA_MOUC_VECTORS_BOOT.sh  FIBER-H-CTX.c  FIBER_H_BENCH.log.jsonl  GAIA_DOCUMENTATION.md  Incluir.md  LICENSE  LICENSE.md  MATRIX_REPORT.txt  Makefile  PAI.py  QUANTIC_MOUC.sh  QUANTIC_MOUC_DAEMON.sh  QUANTIC_MOUC_GUI.sh  README.md  REFATORACAO_GAIA_OMEGA_V2.md  Rafafafa.md  SPEC_BITSTACK_WORLD_MODEL_V1.md  SPEC_SMART_GUARD_V1.md  aether_duel  aether_duel.c  aether_duel_log.csv  aether_duel_v2.c  aether_hybrid_core.c  aether_hybrid_core.py  aether_hybrid_web.c  aether_hybrid_web.py  aether_hyper.c  bench_compare_hashes  bench_compare_hashes.c  bench_compare_hashes.sh  bench_fiber_h  bench_fiber_h.c  bench_fiber_h.sh  bench_fiber_h_log.sh  bench_fiber_lanes6_mode  bench_fiber_lanes6_mode.c  bench_fiber_tree  (+98 more)
.github/workflows/: ci.yml
core/: README.md  files_index.json  generate_core_index.py
core/year_60/: README.md  capture_repository.c  capture_repository.py
dados/: Makefile_Bitraf  RAFAELIA_BITRAF_PRIME_CORE.py  RAFAELIA_BITRAF_PRIME_CORE.pyold  RAFAELIA_BITRAF_RUN_ALL.sh  RAFAELIA_BITRAF_SEEDS.json  RAFAELIA_BITRAF_SEEDS_EXPORT.py  RAFAELIA_BITRAF_SEEDS_GEN.py  RAFAELIA_BITRAF_SEEDS_HEADER.h  RAFAELIA_BITRAF_SEEDS_MIN.py  RAFAELIA_BITRAF_SEED_ADVISOR.pyf  RAFAELIA_BITRAF_SNAPSHOT.sh  RAFAELIA_COMPLEX_AUTO.py  RAFAELIA_DIM_MATRIX_CORE.py  RAFAELIA_DIM_MATRIX_RATIONAL.py  RAFAELIA_DIZIMA_ANALYTICS.py  RAFAELIA_DIZIMA_CONSTANT_BRIDGE.py  RAFAELIA_DIZIMA_CONSTANT_BRIDGE.tsv  RAFAELIA_DIZIMA_CONSTANT_BRIDGE_REPORT.md  RAFAELIA_DIZIMA_INDEX.tsv  RAFAELIA_DIZIMA_INDEX_GERADOR.py  RAFAELIA_FIB_CORE.py  RAFAELIA_FIB_TRIG_BRIDGE.py  RAFAELIA_MATH_CONSTANTS.tsv  RAFAELIA_STATE_SCAN.py  RAFAELIA_STATE_SCAN_v2.py  RAFAELIA_TOROID_BITFLOW.py  RAFAELIA_TOROID_BITFLOW.pyold  RAFAELIA_TOROID_CLUSTER.py  RAFAELIA_TOROID_MASTER.py  RAFAELIA_TOROID_PERIOD_LINK.py  RAFAELIA_TOROID_PLOTS.py  RAFAELIA_TOROID_PLOTS.pyogggg  RAFAELIA_TOROID_PLOTS.pyold  RAFAELIA_TOROID_PLOTS_v2.py  RAFAELIA_TRIG_CORE.py  RAFAELIA_TRIG_CORE2.py  RAFAELIA_VISUAL_CORE.py  RAFAELIA_VISUAL_EXPORT.py  RAFAELIA_VISUAL_MANIFESTO.md  README.md  (+63 more)
docs/: ANALISE_OPORTUNIDADES_OPERACOES.md  ARVORE_ESTRUTURAL.md  ASM_NATIVE_PIPELINE.md  AUDITORIA_CORE_ESTAVEL.md  GAIA_PHI_MANIFESTO_TECNICO.md  GUIA_LIGACOES_E_USO.md  LEVANTAMENTO_ESTRUTURAL_TOTAL.md  MANIFESTO_EIGHT_AREAS.md  MANIFESTO_INTERDISCIPLINAR.md  MANIFESTO_RAFAELIA_PHD.md  README.md  RELEASES_59X.md  ROTEIRO_EXPERIMENTAL_GAIA_CORE.md
docs/research/coherence_dynamics/: 01_introducao.md  02_problema_objetivos_hipoteses.md  README.md
docs/research_coherence/: 00_INCORPORACAO_INCLUIR.md  01_INTRODUCAO.md  README.md
gaia_asm/asm/aarch64/: gaia_asm_mix_u32.S
gaia_asm/asm/armv7/: gaia_asm_mix_u32.S
gaia_asm/asm/x86_64/: gaia_asm_mix_u32.S
gaia_asm/include/: gaia_asm_core.h
gaia_asm/src/: gaia_asm_core.c
gaia_core_v2/: README.md
gaia_core_v2/include/: README.md  gaia_attention.h  gaia_error.h  gaia_hash.h  gaia_log.h  gaia_metric.h  gaia_nexus.h  gaia_projection.h  gaia_quant.h  gaia_vecdb.h  gaia_vector.h  gaia_zipraf.h
gaia_core_v2/src/: README.md  gaia_attention.c  gaia_hash.c  gaia_log.c  gaia_metric.c  gaia_nexus.c  gaia_projection.c  gaia_quant.c  gaia_vecdb.c  gaia_vector.c  gaia_zipraf.c
gaia_engines_v2/: README.md
gaia_engines_v2/include/: README.md  raf_engine.h
gaia_engines_v2/src/: README.md  raf_engine.c
llama_guard/: README.md  bitstack_witness_q4.c  bitstack_witness_q4.h  llama_guard_integration.c  llama_guard_integration.h  smart_guard.c  smart_guard.h  smart_guard_cli.c  synonym_normalizer.c  synonym_normalizer.h
scripts/: asm_manifest.py
tests/: README.md  run_tests.sh  smart_guard_cases.md  structural_selftest.c
tests/expected/: README.md  manifest.json  manifest.jsonl  manifest.md
tests/fixtures/: README.md
tests/fixtures/sample/: README.md
tests/fixtures/sample/sub/: README.md
